<resources>
    <string name="app_name">HireMe</string>

    <string name="menu_favorites">Favorites</string>
    <string name="menu_view_applications">Applications</string>

    <string name="application_sent">Sent</string>
    <string name="application_accepted">Accepted</string>
    <string name="application_rejected">Rejected</string>


    <string name="application_accept">ACCEPT</string>
    <string name="application_reject">REJECT</string>
    <string name="application_mine">My Applications</string>


    <!--Toolbar titles-->
    <string name="bnav_discover">Discover</string>
    <string name="bnav_nearby">NearBy</string>
    <string name="bnav_profile">Mine</string>

    <string name="profile_signup">SignUp</string>
    <string name="profile_title">Profile</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>

    <string name="placeholder_loading">Please wait…</string>
    <string name="placeholder_jobs">No jobs found</string>
    <string name="placeholder_loading_content">Problem loading content</string>
    <string name="placeholder_lorem">Lorem ipsum dola sit ametdfsdfsdfsdfsdfsdfsfsdfsdfsfdssdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsdfsd.</string>

    <string name="job_title">Job Title(40 characters max)</string>
    <string name="job_description">Job Description (250 characters max)</string>
    <string name="job_salary">How much are you willing to pay?(in RWF)</string>
    <string name="job_mine">My Jobs</string>

    <string name="button_add">Add</string>
    <string name="button_retry">Retry</string>
    <string name="button_show_all">Show All</string>

    <string name="welcome_title_text">Set Profile</string>
    <string name="welcome_button_text">Register</string>

    <string name="developer_names">Prince Heir</string>
    <string name="application_applicants">Applicants</string>
    <string name="label_description">Description</string>
    <string name="label_reviews">Reviews</string>
    <string name="application_delete">Delete</string>
    <string name="title_activity_nearby_map">Nearby Jobs</string>
    <string name="search_hint">Enter Job Title</string>
    <string name="bnav_notif">Notifications</string>
    <string name="application_others">Received</string>
    <string name="menu_employees">My Employees</string>


</resources>
