<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditJob">

    <include layout="@layout/layout_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/jobTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/job_title"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <View
                    android:id="@+id/edit_title"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center|center_vertical"
                    android:background="@drawable/vector_edit"
                    android:onClick="updateTitle"/>

            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/jobDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/job_description"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <View
                    android:id="@+id/edit_desc"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center|center_vertical"
                    android:background="@drawable/vector_edit"
                    android:onClick="updateDescription"/>

            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/jobSalary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/job_salary"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <View
                    android:id="@+id/edit_salary"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center|center_vertical"
                    android:background="@drawable/vector_edit"
                    android:onClick="updateSalary" />

            </FrameLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>